# agentic-refactoring-workshop

./: .gitignore  README.md  US 1 - Clarifier du code existant.md  US 2 - Comprendre le legacy et suggérer des modifications.md  US 3 - Standardiser le code.md  US 4 - Figer le comportement avec des tests.md  US 5 - Refactoring accéléré avec un custom prompt.md
java/: README.md  pom.xml
java/src/main/java/com/taskflow/controller/: TaskController.java  VersionController.java
java/src/main/java/com/taskflow/model/: Task.java  TaskStatus.java
java/src/main/java/com/taskflow/repository/: TaskRepository.java
java/src/main/java/com/taskflow/service/: TaskEmailingPipeline.java  TaskRulesEngine.java  TaskScoringService.java  TaskService.java  TaskValidationService.java
java/src/main/resources/: application.properties  application.yml
java/src/test/java/com/taskflow/controller/: TaskControllerTest.java
python/: README.md  pyproject.toml
python/task_flow_api/: __init__.py  controller.py  db.py  email.py  main.py  model.py  repository.py  rules.py  scoring.py  service.py  validation.py
python/tests/: conftest.py  test_controller.py
