[project]
name = "task_flow_api"
version = "0.1.0"
description = "A task management API"
authors = [
    { name = "John", email = "john@task-flow.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.75.0",
    "sqlmodel>=0.0.6",
    "uvicorn>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"