[project]
name = "task_flow_api"
version = "0.1.0"
description = "A task management API"
authors = [
    { name = "John", email = "john@task-flow.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.75.0",
    "sqlmodel>=0.0.6",
    "uvicorn>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["task_flow_api"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false